# cosign-old

./: aclocal.m4  configure  configure.ac
cgi/: Makefile.in  cgi.c  login.c  subfile.c
common/: conf.c  config.h.in  mkcookie.c
daemon/: Makefile.in  command.c  cosignd.8  daemon.c  pusher.c
filters/apache2/: Makefile.in  mod_cosign.c
filters/common/: connect.c  cookiefs.c  sparse.c  undef_package.h
html/: Makefile.in
libcgi/: cgi.c  configure  configure.ac
libsnet/: aclocal.m4  config.h.in  configure  configure.ac  snet.c
tests/: tests.sh
